[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://addons/gamejolt_api_v2/main.gd" type="Script" id=2]
[ext_resource path="res://addons/gamejolt_api_v2/gj_icon.png" type="Texture" id=3]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="GameJoltAPI" type="HTTPRequest" parent="." index="0"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
private_key = "2f0d4c44cf7481d078aec24284aba28a"
game_id = "322464"

[connection signal="api_data_set" from="GameJoltAPI" to="." method="_on_GameJoltAPI_api_data_set"]

[connection signal="api_scores_added" from="GameJoltAPI" to="." method="_on_GameJoltAPI_api_scores_added"]

[connection signal="api_session_opened" from="GameJoltAPI" to="." method="_on_GameJoltAPI_api_session_opened"]


